# Prog_and_alg2022

./: README.md  tets.cpp
gorokhovatskii_v_m/: 1017a.cpp  1100C.cpp  1165b.cpp  1330a.cpp  1352a.cpp  136b.cpp  1404a.cpp  1512b.cpp  1559a.cpp  1669d.cpp  1670b.cpp  1675c.cpp  1678a.cpp  1690d.cpp  1699.cpp  1717b.cpp  1721b.cpp  1734b.cpp  1744c.cpp  1744d.cpp  263a.cpp  271a.cpp  276a.cpp  485a.cpp  4a.cpp  579a.cpp  617a.cpp  879b.cpp  886b.cpp  935b.cpp  967b.cpp  bpm_22_2_1.cpp  bpm_22_2_3.cpp  hw-05-01.cpp  hw-05-03.cpp
gorokhovatskii_v_m/vectora/: CMakeLists.txt  geom.hpp  geom_exec.cpp  main.cpp  main_tests.cpp  mouse_and_cat.cpp  nerabotaet.txt  veclibrary.hpp  vevlib_exec.cpp
